otpbox component bug fixed and prevented unwanted jumping of input focus.

--- a/community/src/index.css
+++ b/community/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #ffffffde;
+  color: #ffffff;
   background-color: #1f1f1f;
 
   font-synthesis: none;
@@ -38,6 +38,7 @@ p{
   text-align: center;
   color:var(--theme-color);
   margin:-8px 0px;
+  cursor: pointer;
 }
 .anchor:hover{
   text-decoration: underline;
